welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:23: error: ';' expected but '=' found.
    tab[cpt1] = getCouleurSol()
              ^